service.yaml
kind: Service
apiVersion: v1
metadata:
  name: aceapp
  namespace: ais-service-demo
  labels:
    app: aceapp
    app.kubernetes.io/component: aceapp
    app.kubernetes.io/instance: aceapp
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: 7600-tcp
      protocol: TCP
      port: 7600
      targetPort: 7600
    - name: 7800-tcp
      protocol: TCP
      port: 7800
      targetPort: 7800
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    deployment: aceapp
status:
  loadBalancer: {}
