route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: aceapp
  namespace: ais-service-demo
  labels:
    app: aceapp
    app.kubernetes.io/component: aceapp
    app.kubernetes.io/instance: aceapp
spec:
  to:
    kind: Service
    name: aceapp
    weight: 100
  port:
    targetPort: 7800-tcp
  tls:
    termination: edge
  wildcardPolicy: None
